--- a/Affiliate/dashboard.html
+++ b/Affiliate/dashboard.html
@@ -8,54 +8,54 @@
     <script src="https://cdn.jsdelivr.net/npm/ethers@5.2/dist/ethers.umd.min.js"></script>
 </head>
 <body>
-<section id="adminControls">
-    <h2>Admin Controls</h2>
-    <div id="userApproval">
-        <h3>User Approval</h3>
-        <input type="text" id="userAddress" placeholder="User Address">
-        <button onclick="approveUser()">Approve User</button>
-        <button onclick="revokeUser()">Revoke User</button>
-    </div>
-    <div id="affiliateApproval">
-        <h3>Affiliate Approval</h3>
-        <input type="text" id="affiliateAddress" placeholder="Affiliate Address">
-        <button onclick="approveAffiliate()">Approve Affiliate</button>
-        <button onclick="revokeAffiliate()">Revoke Affiliate</button>
-    </div>
-    <div id="commissionControl">
-        <h3>Commission Rate</h3>
-        <input type="number" id="commissionRate" placeholder="Commission Rate (%)">
-        <button onclick="setCommissionRate()">Set Rate</button>
-    </div>
-    <div id="toggleDirectPaymentForUser">
-    <h3>Toggle Direct Payment for User</h3>
-    <input type="text" id="userAddress" placeholder="User Address">
-    <button id="toggleDirectPaymentForUserBtn">Toggle Direct Payment</button>
+<div class="container">
+    <section id="adminControls">
+        <h2>Admin Controls</h2>
+        <div id="userApproval">
+            <h3>User Approval</h3>
+            <input type="text" id="userAddress" placeholder="User Address">
+            <button onclick="approveUser()">Approve User</button>
+            <button onclick="revokeUser()">Revoke User</button>
+        </div>
+        <div id="affiliateApproval">
+            <h3>Affiliate Approval</h3>
+            <input type="text" id="affiliateAddress" placeholder="Affiliate Address">
+            <button onclick="approveAffiliate()">Approve Affiliate</button>
+            <button onclick="revokeAffiliate()">Revoke Affiliate</button>
+        </div>
+        <div id="commissionControl">
+            <h3>Commission Rate</h3>
+            <input type="number" id="commissionRate" placeholder="Commission Rate (%)">
+            <button onclick="setCommissionRate()">Set Rate</button>
+        </div>
+        <div id="toggleDirectPaymentForUser">
+            <h3>Toggle Direct Payment for User</h3>
+            <input type="text" id="userAddress" placeholder="User Address">
+            <button id="toggleDirectPaymentForUserBtn">Toggle Direct Payment</button>
+        </div>
+
+        <div id="approvedAffiliates">
+            <h3>Approved Affiliates</h3>
+            <ul id="affiliateList"></ul>
+        </div>
+
+        <div id="approvedUsers">
+            <h3>Approved Users</h3>
+            <ul id="userList"></ul>
+        </div>
+
+        <div id="directPaymentControl">
+            <h3>Direct Payments</h3>
+            <label class="switch">
+                <input id="directPaymentToggle" type="checkbox">
+                <span class="slider round"></span>
+            </label>
+            <span id="directPaymentStatus">Direct Payments Enabled</span>
+        </div>
+        <button id="fetchSalesBtn">Fetch Sales</button> <!-- New button for fetching sales -->
+        <ul id="salesList"></ul> <!-- List to display fetched sales -->
+    </section>
 </div>
-
-    <div id="approvedAffiliates">
-    <h3>Approved Affiliates</h3>
-    <ul id="affiliateList"></ul>
-</div>
-
-<div id="approvedUsers">
-    <h3>Approved Users</h3>
-    <ul id="userList"></ul>
-</div>
-
-
-    
-    <div id="directPaymentControl">
-        <h3>Direct Payments</h3>
-        <label class="switch">
-            <input id="directPaymentToggle" type="checkbox">
-            <span class="slider round"></span>
-        </label>
-        <span id="directPaymentStatus">Direct Payments Enabled</span>
-    </div>
-    <button id="fetchSalesBtn">Fetch Sales</button> <!-- New button for fetching sales -->
-    <ul id="salesList"></ul> <!-- List to display fetched sales -->
-</section>
 
 <script src="dashboard.js"></script> <!-- Link to the JavaScript file -->
 </body>
