--- a/Affiliate/dashboard.html
+++ b/Affiliate/dashboard.html
@@ -8,9 +8,15 @@
     <script src="https://cdn.jsdelivr.net/npm/ethers@5.2/dist/ethers.umd.min.js"></script>
 </head>
 <body>
-    <button id="approveUserBtn">Approve User</button> <!-- Add the button element -->
-    <input type="text" id="userAddress" placeholder="Enter User Address"> <!-- Add an input field for user address -->
-    <!-- Other HTML elements as needed -->
+    <div id="approveUserSection">
+        <input type="text" id="userAddress" placeholder="Enter user address">
+        <button id="approveUserBtn">Approve User</button>
+    </div>
+
+    <div id="revokeUserSection">
+        <input type="text" id="userAddressToRemove" placeholder="Enter user address">
+        <button id="revokeUserBtn">Revoke User</button>
+    </div>
 
 <script src="dash-test.js"></script> <!-- Link to the JavaScript file -->
 </body>
