--- a/Affiliate/dashboard.html
+++ b/Affiliate/dashboard.html
@@ -31,8 +31,8 @@
         <button id="revokeAffiliateBtn">Revoke Affiliate</button>
     </div>
     <!-- Button to set commission rate -->
-    <div>
-        <input type="number" id="commissionRate" placeholder="Enter new commission rate" min="0" max="100" required>
+  <div>
+        <input type="number" id="newCommissionRate" placeholder="Enter new commission rate" min="0" max="100" required>
         <button id="setCommissionRateBtn">Set Commission Rate</button>
 
     </div>
