--- a/Affiliate/dashboard.html
+++ b/Affiliate/dashboard.html
@@ -8,61 +8,74 @@
     <script src="https://cdn.jsdelivr.net/npm/ethers@5.2/dist/ethers.umd.min.js"></script>
 </head>
 <body>
+    <!-- Section for approving a user -->
     <div id="approveUserSection">
         <input type="text" id="userAddress" placeholder="Enter user address">
         <button id="approveUserBtn">Approve User</button>
     </div>
 
+    <!-- Section for revoking a user -->
     <div id="revokeUserSection">
         <input type="text" id="userAddressToRemove" placeholder="Enter user address">
         <button id="revokeUserBtn">Revoke User</button>
     </div>
 
+    <!-- Section for approving and registering an affiliate -->
     <div>
         <input type="text" id="affiliateAddress" placeholder="Enter Affiliate Address" required>
         <input type="number" id="commissionRate" placeholder="Enter Commission Rate" min="0" max="100" required>
         <button id="approveAndRegisterAffiliateBtn">Approve and Register Affiliate</button>
     </div>
 
-
-    <!-- Button to revoke an affiliate -->
+    <!-- Section for revoking an affiliate -->
     <div>
-        <input type="text" id="affiliateAddress" placeholder="Affiliate Address">
+        <input type="text" id="revokeAffiliateAddress" placeholder="Affiliate Address">
         <button id="revokeAffiliateBtn">Revoke Affiliate</button>
     </div>
-    <!-- Button to set commission rate -->
-  <div>
+
+    <!-- Section for setting commission rate -->
+    <div>
         <input type="number" id="newCommissionRate" placeholder="Enter new commission rate" min="0" max="100" required>
         <button id="setCommissionRateBtn">Set Commission Rate</button>
-
     </div>
 
+    <!-- Section for toggling direct payment -->
     <div>
-    <button id="toggleDirectPaymentBtn">Toggle Direct Payment</button>
-    <p id="paymentStatus"></p>
+        <button id="toggleDirectPaymentBtn">Toggle Direct Payment</button>
+        <p id="paymentStatus"></p>
     </div>
 
-    <!-- Button to fetch the status of direct payments -->
-<div>
-    <button id="fetchDirectPaymentStatusBtn">Fetch Direct Payment Status</button>
-</div>
-
-    <!-- Element to display the status of direct payments -->
-<div id="directPaymentStatus"></div>
-
-
+    <!-- Section for fetching the status of direct payments -->
     <div>
-    <!-- Input field for entering AffiliateTracker contract address -->
-<input type="text" id="affiliateTrackerAddress" placeholder="Enter AffiliateTracker Address" />
-
-<!-- Button to set AffiliateTracker address -->
-<button id="setAffiliateTrackerAddressBtn">Set AffiliateTracker Address</button>
-
+        <button id="fetchDirectPaymentStatusBtn">Fetch Direct Payment Status</button>
     </div>
 
+    <!-- Section to display the status of direct payments -->
+    <div id="directPaymentStatus"></div>
 
+    <!-- Section for setting AffiliateTracker contract address -->
+    <div>
+        <input type="text" id="affiliateTrackerAddress" placeholder="Enter AffiliateTracker Address" />
+        <button id="setAffiliateTrackerAddressBtn">Set AffiliateTracker Address</button>
+    </div>
 
+    <!-- Additional buttons with spacing -->
+    <div style="margin-top: 20px;">
+        <button id="withdrawFundsBtn">Withdraw Funds</button>
+    </div>
 
-<script src="dash-test.js"></script> <!-- Link to the JavaScript file -->
+    <div style="margin-top: 20px;">
+        <button id="viewContractBalanceBtn">View Contract Balance</button>
+    </div>
+
+    <div style="margin-top: 20px;">
+        <button id="triggerEmergencyStopBtn">Trigger Emergency Stop</button>
+    </div>
+
+    <div style="margin-top: 20px;">
+        <button id="fetchSalesBtn">Fetch Sales</button>
+    </div>
+
+    <script src="dash-test.js"></script> <!-- Link to the JavaScript file -->
 </body>
 </html>
